src/styles/layout/_nugget_table_view_layout.sass
#nuggetTableView
  align-items: start
  align-self: stretch
  display: grid
  grid-template-rows: minmax(10px, 1fr)

  > .entities
    display: grid
    height: 100%
    overflow-x: auto
    overflow-y: visible

    .table
      border-collapse: collapse
      table-layout: fixed

      .header,
      .content
        .row
          height: 40px

          &.selected
            position: relative

            .subscribe
              padding-left: 5px

          .cell
            box-sizing: border-box
            padding: 0 $gutter * 2
            position: relative
            white-space: nowrap

            p
              overflow: hidden
              text-overflow: ellipsis

            &.subscribe
              max-width: 120px
              min-width: 120px

              .check-box
                margin: 0 auto

            &.id
              max-width: 50px
              min-width: 50px

            &.title
              max-width: 127px
              min-width: 127px

            &.pace
              max-width: 85px
              min-width: 85px

            &.status
              max-width: 90px
              min-width: 90px

            &.kind
              max-width: 72px
              min-width: 72px

            &.phase
              max-width: 108px
              min-width: 108px

            &.days
              max-width: 70px
              min-width: 70px

            &.target-date
              max-width: 100px
              min-width: 100px

            &.priority
              max-width: 90px
              min-width: 90px

            &.tags
              max-width: 125px
              min-width: 125px
                
            &.created-at
              max-width: 120px
              min-width: 120px

            .tooltip
              position: absolute

        &.header
          .cell
            .title-container
              display: grid
              grid-column-gap: $gutter * 2
              justify-content: center

            &.active-sorting
              .title-container
                align-items: center
                grid-template-columns: auto 10px

                .icon
                  display: grid

        &.content
          .cell
            text-align: center

            &.title
              text-align: left

            &.pace,
            &.tags
              box-sizing: border-box
              padding: $gutter

              .pace-card
                padding: $gutter 0
                width: 85px

            &.tags
              align-items: center
              grid-auto-flow: column
              grid-column-gap: $gutter

              .tag-card
                box-sizing: border-box
                display: inline-block
                margin-right: $gutter
                padding: $gutter $gutter * 3
                text-align: center

